# router/carrier_company.go
@@ -14,6 +14,7 @@ func init() {
 		g.Get("/index")
 		g.Post("/add")
 		g.Post("/edit")
+		g.Post("/edit-status")
 		g.Post("/delete")
 		g.Post("/edit-status", "EditStatus")
 	})
